will actually attempt to submit the grades.  vocal about writing backup of grades to disk.  updated line separator of data written to disk to work in windows